more models tested

--- a/all_classifiers.ipynb
+++ b/all_classifiers.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -39,10 +31,6 @@
     "            # print(e)\n",
     "    return all_clfs_names, all_clfs_clf\n",
     "\n",
-    "df = pd.read_csv(r'data/data_processed.csv')\n",
-    "df_continous = pd.read_csv(r'data/data_continous.csv')\n",
-    "df_categorical = pd.read_csv(r'data/data_categorical.csv')\n",
-    "\n",
     "# --------------------------------------------------------------------------------------------------\n",
     "# copying job satisfaction into new array\n",
     "JSat = df['JobSatisfaction'].values\n",
@@ -53,18 +41,30 @@
     "\n",
     "JSat_binary = [0 if val <= JSat_threshold else val for val in JSat]\n",
     "JSat_binary = [1 if val > JSat_threshold else val for val in JSat_binary]\n",
-    "print(JSat_binary)\n",
+    "# print(JSat_binary)\n",
     "\n",
     "# splitting inputs by row index\n",
-    "# continous data\n",
-    "df_training_continous = df_continous.iloc[:1200,:]\n",
-    "df_validation_continous = df_continous.iloc[1200:,:]\n",
-    "# categorical data\n",
-    "df_training_categorical = df_categorical.iloc[:1200,:]\n",
-    "df_validation_categorical = df_categorical.iloc[1200:,:]\n",
+    "df = pd.read_csv(r'data/data_processed.csv')\n",
+    "df_cat = pd.read_csv(r'data/data_categorical.csv')\n",
+    "\n",
+    "df_good = pd.concat([df_cat, df[\"MonthlyIncome\"], df[\"BusinessTravel\"], df[\"StockOptionLevel\"], df[\"DistanceFromHome\"]], axis=1)\n",
+    "\n",
+    "# print(df_good)\n",
+    "# copy attrition and drop from dataframe\n",
+    "JAtt = df[\"Attrition\"].values\n",
+    "\n",
+    "df_good = df_good.drop([\"Unnamed: 0\"], axis=1)\n",
+    "df_good = df_good.drop(['Attrition'], axis=1)\n",
     "# splitting outputs by number\n",
     "JSat_training = JSat[:1200]\n",
     "JSat_validation = JSat[1200:]\n",
+    "\n",
+    "# splitting new df\n",
+    "df_train = df_good.iloc[:1200,:]\n",
+    "df_val = df_good.iloc[1200:,:]\n",
+    "# splitting Jatt into new sizes\n",
+    "JAtt_train = JAtt[:1200]\n",
+    "JAtt_val = JAtt[1200:]\n",
     "# --------------------------------------------------------------------------------------------------\n",
     "\n",
     "all_clfs_names, all_clfs_clf = getClassifiers()\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "output_scroll"
@@ -218,10 +218,10 @@
      "output_type": "stream",
      "text": [
       "Starting SVC with params: {'C': 10, 'kernel': 'poly', 'degree': 4}... 86251 OUT OF 86252\n",
-      " finished in 0.46645236015319824s; had an f1 of: 0.4444444444444444\n",
+      " finished in 27.520360231399536s; had an f1 of: 0.8185185185185185\n",
       "\n",
       "\n",
-      "Finalized all trainings in 14533.979711055756s. Phew!\n"
+      "Finalized all trainings in 12394.360983610153s. Phew!\n"
      ]
     }
    ],
@@ -282,21 +282,21 @@
     "                model = Model\n",
     "                # some models fail with *kwargs\n",
     "                model.set_params(**params)\n",
-    "                model.fit(df_training_categorical, JSat_training)\n",
+    "                model.fit(df_train, JAtt_train)\n",
     "\n",
-    "                JSat_predicted = model.predict(df_validation_categorical)\n",
+    "                JAtt_predicted = model.predict(df_val)\n",
     "\n",
     "                # compute model accuracy\n",
     "                model_accuracy = metrics.accuracy_score(\n",
-    "                    JSat_validation, JSat_predicted)\n",
+    "                    JAtt_val, JAtt_predicted)\n",
     "                # compute model log loss\n",
     "                # model_log_loss = metrics.log_loss(JSat_validation, JSat_predicted, average=\"micro\")\n",
     "                # compute model precision\n",
     "                model_precision = metrics.precision_score(\n",
-    "                    JSat_validation, JSat_predicted, average=\"micro\")\n",
+    "                    JAtt_val, JAtt_predicted, average=\"micro\")\n",
     "                #  compute model precision\n",
     "                model_recall = metrics.recall_score(\n",
-    "                    JSat_validation, JSat_predicted, average=\"micro\")\n",
+    "                    JAtt_val, JAtt_predicted, average=\"micro\")\n",
     "                # compute model f1 score\n",
     "                model_f1 = 2*(model_precision*model_recall) / \\\n",
     "                    (model_precision + model_recall)\n",
@@ -349,14 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "date and time = 23-01-2023-16-13-27\n"
+      "date and time = 24-01-2023-14-40-53\n"
      ]
     }
    ],
@@ -371,11 +371,11 @@
     "print(\"date and time =\", dt_string)\n",
     "\n",
     "# save current insights into a file\n",
-    "with open(\"insights-\" + dt_string + \".pck\", 'wb') as f:\n",
+    "with open(\"out/logs/insights-\" + dt_string + \".pck\", 'wb') as f:\n",
     "    pickle.dump(insights, f)\n",
-    "with open(\"globalstats-\" + dt_string + \".pck\", 'wb') as f:\n",
+    "with open(\"out/logs/globalstats-\" + dt_string + \".pck\", 'wb') as f:\n",
     "    pickle.dump(global_stats, f)\n",
-    "with open(\"modelstats-\" + dt_string + \".pck\", 'wb') as f:\n",
+    "with open(\"out/logs/modelstats-\" + dt_string + \".pck\", 'wb') as f:\n",
     "    pickle.dump(model_stats, f)\n",
     "\n",
     "f.close()"
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,45 +468,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model AdaBoostClassifier with best f1 score 1.0 and it took 0.2s to train\n",
-      "Model BaggingClassifier with best f1 score 1.0 and it took 0.32s to train\n",
-      "Model BernoulliNB with best f1 score 0.2037037037037037 and it took 0.03s to train\n",
-      "Model CalibratedClassifierCV with best f1 score 0.774074074074074 and it took 1.39s to train\n",
-      "Model CategoricalNB with best f1 score 0 and it took 2.67s to train\n",
-      "Model ComplementNB with best f1 score 0.2222222222222222 and it took 0.01s to train\n",
+      "Model AdaBoostClassifier with best f1 score 0.837037037037037 and it took 0.24s to train\n",
+      "Model BaggingClassifier with best f1 score 0.7111111111111111 and it took 0.7s to train\n",
+      "Model BernoulliNB with best f1 score 0.8185185185185185 and it took 0.02s to train\n",
+      "Model CalibratedClassifierCV with best f1 score 0.8185185185185185 and it took 0.27s to train\n",
+      "Model CategoricalNB with best f1 score 0 and it took 0.64s to train\n",
+      "Model ComplementNB with best f1 score 0.8222222222222222 and it took 0.01s to train\n",
       "Model DecisionTreeClassifier with best f1 score 0 and it took 0.01s to train\n",
-      "Model DummyClassifier with best f1 score 0.2851851851851852 and it took 0.0s to train\n",
-      "Model ExtraTreesClassifier with best f1 score 1.0 and it took 0.27s to train\n",
-      "Model GaussianNB with best f1 score 1.0 and it took 0.01s to train\n",
-      "Model GaussianProcessClassifier with best f1 score 0.2851851851851852 and it took 4.54s to train\n",
-      "Model GradientBoostingClassifier with best f1 score 1.0 and it took 0.64s to train\n",
-      "Model HistGradientBoostingClassifier with best f1 score 1.0 and it took 0.54s to train\n",
-      "Model KNeighborsClassifier with best f1 score 0.2037037037037037 and it took 0.04s to train\n",
+      "Model DummyClassifier with best f1 score 0.8185185185185185 and it took 0.0s to train\n",
+      "Model ExtraTreesClassifier with best f1 score 0.8407407407407409 and it took 0.25s to train\n",
+      "Model GaussianNB with best f1 score 0.8407407407407409 and it took 0.0s to train\n",
+      "Model GaussianProcessClassifier with best f1 score 0.7518518518518519 and it took 0.76s to train\n",
+      "Model GradientBoostingClassifier with best f1 score 0.7296296296296296 and it took 1.1s to train\n",
+      "Model HistGradientBoostingClassifier with best f1 score 0.8481481481481481 and it took 0.94s to train\n",
+      "Model KNeighborsClassifier with best f1 score 0.7666666666666667 and it took 0.05s to train\n",
       "Model LabelPropagation with best f1 score 0 and it took 0.06s to train\n",
       "Model LabelSpreading with best f1 score 0 and it took 0.12s to train\n",
-      "Model LinearDiscriminantAnalysis with best f1 score 0.26296296296296295 and it took 0.02s to train\n",
-      "Model LinearSVC with best f1 score 0.35185185185185186 and it took 0.26s to train\n",
-      "Model LogisticRegression with best f1 score 0.825925925925926 and it took 2.69s to train\n",
-      "Model LogisticRegressionCV with best f1 score 0 and it took 2.42s to train\n",
-      "Model MLPClassifier with best f1 score 0.25925925925925924 and it took 0.41s to train\n",
-      "Model MultinomialNB with best f1 score 0.2222222222222222 and it took 0.01s to train\n",
-      "Model NearestCentroid with best f1 score 0.2222222222222222 and it took 0.01s to train\n",
-      "Model NuSVC with best f1 score 0 and it took 0.02s to train\n",
-      "Model PassiveAggressiveClassifier with best f1 score 0.2851851851851852 and it took 0.04s to train\n",
-      "Model Perceptron with best f1 score 0.2037037037037037 and it took 0.03s to train\n",
-      "Model QuadraticDiscriminantAnalysis with best f1 score 1.0 and it took 0.02s to train\n",
-      "Model RadiusNeighborsClassifier with best f1 score 0 and it took 0.01s to train\n",
-      "Model RandomForestClassifier with best f1 score 1.0 and it took 0.23s to train\n",
-      "Model RidgeClassifier with best f1 score 0 and it took 0.04s to train\n",
-      "Model SGDClassifier with best f1 score 0.28888888888888886 and it took 0.01s to train\n",
-      "Model SVC with best f1 score 1.0 and it took 2.86s to train\n"
+      "Model LinearDiscriminantAnalysis with best f1 score 0.8740740740740742 and it took 0.03s to train\n",
+      "Model LinearSVC with best f1 score 0.8185185185185185 and it took 0.1s to train\n",
+      "Model LogisticRegression with best f1 score 0.6703703703703704 and it took 2.79s to train\n",
+      "Model LogisticRegressionCV with best f1 score 0 and it took 1.62s to train\n",
+      "Model MLPClassifier with best f1 score 0.8185185185185185 and it took 0.09s to train\n",
+      "Model MultinomialNB with best f1 score 0.5703703703703704 and it took 0.01s to train\n",
+      "Model NearestCentroid with best f1 score 0.4185185185185185 and it took 0.01s to train\n",
+      "Model NuSVC with best f1 score 0 and it took 0.01s to train\n",
+      "Model PassiveAggressiveClassifier with best f1 score 0.8185185185185185 and it took 0.02s to train\n",
+      "Model Perceptron with best f1 score 0.8185185185185185 and it took 0.01s to train\n",
+      "Model QuadraticDiscriminantAnalysis with best f1 score 0.8444444444444444 and it took 0.04s to train\n",
+      "Model RadiusNeighborsClassifier with best f1 score 0 and it took 0.02s to train\n",
+      "Model RandomForestClassifier with best f1 score 0.8518518518518519 and it took 0.2s to train\n",
+      "Model RidgeClassifier with best f1 score 0 and it took 0.05s to train\n",
+      "Model SGDClassifier with best f1 score 0.24444444444444444 and it took 0.01s to train\n",
+      "Model SVC with best f1 score 0.8185185185185185 and it took 110.51s to train\n"
      ]
     }
    ],
@@ -518,22 +518,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model AdaBoostClassifier with best f1 score 1.0 and it took 0.2s to train\n",
-      "Model BaggingClassifier with best f1 score 1.0 and it took 0.32s to train\n",
-      "Model ExtraTreesClassifier with best f1 score 1.0 and it took 0.27s to train\n",
-      "Model GaussianNB with best f1 score 1.0 and it took 0.01s to train\n",
-      "Model GradientBoostingClassifier with best f1 score 1.0 and it took 0.64s to train\n",
-      "Model HistGradientBoostingClassifier with best f1 score 1.0 and it took 0.54s to train\n",
-      "Model QuadraticDiscriminantAnalysis with best f1 score 1.0 and it took 0.02s to train\n",
-      "Model RandomForestClassifier with best f1 score 1.0 and it took 0.23s to train\n",
-      "Model SVC with best f1 score 1.0 and it took 2.86s to train\n"
+      "Model AdaBoostClassifier with best f1 score 0.837037037037037 and it took 0.24s to train\n",
+      "Model ExtraTreesClassifier with best f1 score 0.8407407407407409 and it took 0.25s to train\n",
+      "Model GaussianNB with best f1 score 0.8407407407407409 and it took 0.0s to train\n",
+      "Model HistGradientBoostingClassifier with best f1 score 0.8481481481481481 and it took 0.94s to train\n",
+      "Model LinearDiscriminantAnalysis with best f1 score 0.8740740740740742 and it took 0.03s to train\n"
      ]
     }
    ],
