some stats and model comparison

--- a/all_classifiers.ipynb
+++ b/all_classifiers.ipynb
@@ -571,8 +571,7 @@
     "        best_model = model\n",
     "        best_time = model[\"model_time\"]\n",
     "\n",
-    "print(str(best_model))\n",
-    "\n"
+    "print(str(best_model))"
    ]
   }
  ],
